# rambler_autoreg

./: .gitignore  .gitmessage  INSTALL.bat  README.md  START.bat  install.bat  main.py  pyproject.toml  requirements.txt  start.bat  start.py
bot/: ask.py  author.py  config.py  input.py  logger.py  output.py  paths.py  scripts.py
bot/js/: hcaptcha.js
bot/rambler/: __init__.py  account.py  api.py  browser.py
config/.default/: config.toml
rambler_autoreg/: __main__.py  autoreg.py  captcha_services.py  config.py  definitions.py  logger.py  main.py  output.py
rambler_autoreg/rambler/: account_creator.py  account_model.py  api.py
rambler_autoreg/rambler/playwright/: api.py  captcha_solver.py
