[tool.poetry]
name = "rambler-autoreg"
version = "2.3"
description = "Rambler autoreg"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-slugify = "^8.0.1"
playwright = "^1.37.0"
faker = "^18.6.1"
loguru = "^0.7.0"
better-automation = "^0.5.2"
better-proxy = "^0.2.0"
pandas = "^2.0.3"
pydantic = "^2.3.0"
questionary = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
